--- a/src/Osu.Music.UI/Views/AboutView.xaml
+++ b/src/Osu.Music.UI/Views/AboutView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Osu.Music.UI.Views"
              mc:Ignorable="d" 
-             Width="600" MinWidth="600" MaxWidth="600"
+             Width="450" MinWidth="450" MaxWidth="450"
              Height="450" MaxHeight="450" MinHeight="450">
     <UserControl.Resources>
         <DataTemplate x:Key="LicenseTemplate">
@@ -25,17 +25,25 @@
             </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
-    <Border Background="White" CornerRadius="5" Padding="0 5 0 5">
+    <Border Background="White" CornerRadius="10 10 5 5" Padding="0 0 0 5">
         <Border.Effect>
             <DropShadowEffect BlurRadius="15" ShadowDepth="0" Direction="0"/>
         </Border.Effect>
         <Grid>
-            <ScrollViewer>
-                <StackPanel Orientation="Vertical" Margin="5">
-                    <Image Source="/Osu.Music.UI;component/Resources/Images/Logo/Logo.png" Width="50" RenderOptions.BitmapScalingMode="HighQuality"/>
-                    <TextBlock Text="osu.Music" Style="{DynamicResource MenuHeader}" HorizontalAlignment="Center" Margin="0" FontSize="14"/>
-                    <TextBlock Style="{DynamicResource MenuDefault}" HorizontalAlignment="Center" Margin="0 0 0 20" FontSize="14"
+            <Grid.RowDefinitions>
+                <RowDefinition Height="160"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Border Background="{DynamicResource SolidColorBrushMain}" CornerRadius="5 5 0 0">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                    <TextBlock FontFamily="{DynamicResource MaterialIcons}" Text="&#xf01f;" FontSize="100" Foreground="White"/>
+                    <TextBlock Text="osu.Music" Style="{DynamicResource MenuHeader}" HorizontalAlignment="Center" Margin="0" FontSize="16" Foreground="White"/>
+                    <TextBlock Style="{DynamicResource MenuDefault}" HorizontalAlignment="Center" Margin="0 5 0 20" FontSize="16" Foreground="White"
                            Text="{Binding DataContext.Version, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:AboutView}}}"/>
+                </StackPanel>
+            </Border>
+            <ScrollViewer Grid.Row="1" Margin="0 5 0 0">
+                <StackPanel Orientation="Vertical" Margin="5">
                     <Expander>
                         <Expander.Header>
                             <TextBlock Text="License" Style="{DynamicResource MenuHeader}" VerticalAlignment="Center" Padding="0 0 0 0"/>
