--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -28,13 +28,11 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <ContentControl Margin="13 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                <StackPanel Orientation="Horizontal" 
-                            Background="{DynamicResource SolidColorBrushMain}">
-                    <Button Style="{DynamicResource SidebarButtonOsu}" Command="{Binding OpenAboutCommand}"/>
-                    <Button Style="{DynamicResource SettingsButton}" Command="{Binding OpenSettingsCommand}"/>
-                </StackPanel>
-            </ContentControl>
+            <Border Margin="13 0 0 0" Padding="5 0 5 0" HorizontalAlignment="Left" VerticalAlignment="Top" 
+                    Background="{DynamicResource SolidColorBrushMain}" CornerRadius="0 0 10 10">
+                <Button Style="{DynamicResource SidebarButtonOsu}" Command="{Binding OpenAboutCommand}"/>
+            </Border>
+            <Button Style="{DynamicResource SettingsButton}" Command="{Binding OpenSettingsCommand}" HorizontalAlignment="Right"/>
             <StackPanel Grid.Column="1"  HorizontalAlignment="Right" Orientation="Horizontal">
                 <Button Style="{StaticResource TitleBarUpdates}" Visibility="{Binding DataContext.Updater.State, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Converter={StaticResource UpdateStateToVisibilityConverter}, FallbackValue=Collapsed}"
                         Command="{Binding DataContext.UpdateAppCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"/>
