--- a/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
@@ -19,28 +19,6 @@
     </DataTemplate>
 
     <DataTemplate x:Key="PlaylistTile" DataType="{x:Type cm:Playlist}">
-        <DataTemplate.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Trigger.EnterActions>
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Duration="0:0:0.250" To="1.0"
-                                                         Storyboard.TargetName="PlaylistControls"
-                                                         Storyboard.TargetProperty="Opacity"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </Trigger.EnterActions>
-                <Trigger.ExitActions>
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Duration="0:0:0.250" To="0.0"
-                                                         Storyboard.TargetName="PlaylistControls"
-                                                         Storyboard.TargetProperty="Opacity"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </Trigger.ExitActions>
-            </Trigger>
-        </DataTemplate.Triggers>
         <Border BorderBrush="{DynamicResource SolidColorBrushMainBorder}" Background="White" BorderThickness="1" CornerRadius="5" Height="210" Width="160" Margin="5">
             <StackPanel Margin="3">
                 <Grid>
@@ -49,10 +27,31 @@
                         <TextBlock FontFamily="{DynamicResource MaterialIcons}" FontSize="100" Text="&#xe03d;" Foreground="{DynamicResource SolidColorBrushMain}" HorizontalAlignment="Center"
                                VerticalAlignment="Center" Padding="0" Margin="0 10 0 0"/>
                     </Grid>
-                    <Grid>
-                        <Image Width="130" Height="122"/>
-                    </Grid>
                     <Border x:Name="PlaylistControls" Width="130" Height="122" Background="#70000000" Opacity="0.0" CornerRadius="15" Margin="0 15 0 0">
+                        <Border.Style>
+                            <Style TargetType="{x:Type Border}">
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Trigger.EnterActions>
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Duration="0:0:0.250" To="1.0"
+                                                         Storyboard.TargetProperty="Opacity"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </Trigger.EnterActions>
+                                        <Trigger.ExitActions>
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Duration="0:0:0.250" To="0.0"
+                                                         Storyboard.TargetProperty="Opacity"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </Trigger.ExitActions>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Button Style="{DynamicResource PlaylistAction}" Content="&#xe3c9;" FontSize="24"
                                     HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
