--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -13,4 +13,5 @@
     <convert:UpdateStateToVisibilityConverter x:Key="UpdateStateToVisibilityConverter"/>
     <convert:PlaylistCountToStringConverter x:Key="PlaylistCountToStringConverter"/>
     <convert:BeatmapToAvailablePlaylistsConverter x:Key="BeatmapToAvailablePlaylistsConverter"/>
+    <convert:MultipleParametersConverter x:Key="MultipleParametersConverter"/>
 </ResourceDictionary>
