--- a/src/Osu.Music.UI/Views/DialogCreatePlaylistView.xaml
+++ b/src/Osu.Music.UI/Views/DialogCreatePlaylistView.xaml
@@ -4,16 +4,28 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Osu.Music.UI.Views"
+             xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
              mc:Ignorable="d" 
              Width="450" MinWidth="450" MaxWidth="450">
-    <Border Style="{DynamicResource DialogBorder}">
-        <StackPanel Margin="10 10 10 5">
-            <TextBlock Text="Create playlist" FontFamily="{DynamicResource Roboto}" FontSize="16" FontWeight="Bold"/>
-            <TextBox Margin="0 10 0 0" Text="{Binding PlaylistName}" FontFamily="{DynamicResource Roboto}" FontSize="16"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 15 0 0">
-                <Button Style="{DynamicResource MaterialButton}" Content="CANCEL" Command="{Binding CancelCommand}"/>
-                <Button Style="{DynamicResource MaterialButton}" Content="CREATE" Margin="10 0 0 0" Command="{Binding ConfirmCommand}"/>
+    <Grid Margin="16" Background="White">
+        <StackPanel>
+            <TextBlock>New Playlist:</TextBlock>
+            <TextBox wpf:HintAssist.Hint="Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}"                 
+                 Margin="0 6 0 0"
+                 FontSize="18" Grid.Row="1"
+                 Text="{Binding PlaylistName}">
+            </TextBox>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2"
+                    Margin="0 16 0 0">
+                <Button IsDefault="True" Style="{StaticResource MaterialDesignFlatButton}"
+                    Command="{Binding ConfirmCommand}">
+                    ACCEPT
+                </Button>
+                <Button IsCancel="True" Margin="8 0 0 0" Style="{StaticResource MaterialDesignFlatButton}"
+                    Command="{Binding CancelCommand}">
+                    CANCEL
+                </Button>
             </StackPanel>
         </StackPanel>
-    </Border>
+    </Grid>
 </UserControl>
