--- a/src/Osu.Music.UI/Resources/Dictionaries/Defaults.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Defaults.xaml
@@ -35,7 +35,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style TargetType="{x:Type ScrollBar}">
         <Setter Property="Margin" Value="-5,0,0,0" />
         <Setter Property="Stylus.IsFlicksEnabled" Value="false" />
@@ -61,9 +61,10 @@
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter TargetName="ScrollBarThumb" Property="Visibility" Value="Collapsed" />
+                            <Setter TargetName="ScrollBarThumb" Property="Visibility" Value="Collapsed"/>
                         </Trigger>
                         <Trigger Property="Orientation" Value="Horizontal">
+                            <Setter TargetName="PART_Track" Property="Margin" Value="0 15 0 0"/>
                             <Setter TargetName="GridRoot" Property="LayoutTransform">
                                 <Setter.Value>
                                     <RotateTransform Angle="-90" />
@@ -88,7 +89,51 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-       
     </Style>
-
+    <Style TargetType="{x:Type ScrollViewer}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ScrollViewer}">
+                    <Grid x:Name="Grid" Background="{TemplateBinding Background}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Rectangle x:Name="Corner" Opacity="0"
+                    Grid.Column="1" Grid.Row="1"
+                    Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+                        <ScrollContentPresenter x:Name="PART_ScrollContentPresenter"
+                                Grid.Column="0" Grid.Row="0"
+                                CanContentScroll="{TemplateBinding CanContentScroll}"
+                                CanHorizontallyScroll="False" CanVerticallyScroll="False"
+                                ContentTemplate="{TemplateBinding ContentTemplate}"
+                                Content="{TemplateBinding Content}"
+                                Margin="{TemplateBinding Padding}"/>
+                        <ScrollBar x:Name="PART_VerticalScrollBar"
+                    Grid.Column="1" Grid.Row="0"
+                    AutomationProperties.AutomationId="VerticalScrollBar"
+                    Cursor="Arrow"
+                    Maximum="{TemplateBinding ScrollableHeight}" Minimum="0"
+                    Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
+                    Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
+                    ViewportSize="{TemplateBinding ViewportHeight}"/>
+                        <ScrollBar x:Name="PART_HorizontalScrollBar"
+                    AutomationProperties.AutomationId="HorizontalScrollBar"
+                    Cursor="Arrow"
+                    Grid.Column="0" Grid.Row="1"
+                    Maximum="{TemplateBinding ScrollableWidth}"
+                    Minimum="0"
+                    Orientation="Horizontal"
+                    Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
+                    Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
+                    ViewportSize="{TemplateBinding ViewportWidth}"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
