--- a/src/Osu.Music.UI/Views/DialogEditPlaylistView.xaml
+++ b/src/Osu.Music.UI/Views/DialogEditPlaylistView.xaml
@@ -11,7 +11,7 @@
     <Grid Margin="16">
         <StackPanel>
             <TextBlock>Edit Playlist</TextBlock>
-            <TextBox wpf:HintAssist.Hint="Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}"                 
+            <TextBox materialDesign:HintAssist.Hint="Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}"                 
                  Margin="0 6 0 0"
                  FontSize="18"
                  Text="{Binding Playlist.Name}">
@@ -22,35 +22,46 @@
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel>
-                    <TextBlock>Background</TextBlock>
-                    <materialDesign:ColorPicker wpf:HintAssist.Hint="Background"/>
-                    <ComboBox wpf:HintAssist.Hint="Icon" Style="{StaticResource MaterialDesignFloatingHintComboBox}"
-                      Margin="0 6 0 0"
-                      FontSize="18"
-                      ItemsSource="{Binding Icons}"
-                      SelectedItem="{Binding Playlist.Cover.Icon}">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate DataType="{x:Type wpf:PackIconKind}">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="30"/>
-                                        <ColumnDefinition Width="1*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <materialDesign:PackIcon Kind="{Binding Path=.}" HorizontalAlignment="Left"/>
-                                    <TextBlock Grid.Column="1" Text="{Binding Path=., Converter={StaticResource PackIconKindToStringConverter}}"/>
-                                </Grid>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
-                    <materialDesign:ColorPicker wpf:HintAssist.Hint="Background"/>
+                    <Expander HorizontalAlignment="Stretch" Header="Background"
+                              materialDesign:ExpanderAssist.HorizontalHeaderPadding="0,2,24,2">
+                        <StackPanel Orientation="Vertical" TextBlock.Foreground="{DynamicResource MaterialDesignBody}" Margin="0,8,24,16">
+                            <materialDesign:ColorPicker Color="{Binding Playlist.Cover.BackgroundColor, Converter={StaticResource ColorStringConverter}}" Height="150"/>
+                        </StackPanel>
+                    </Expander>
+                    <Expander HorizontalAlignment="Stretch" Header="Icon"
+                              materialDesign:ExpanderAssist.HorizontalHeaderPadding="0,2,24,2">
+                        <StackPanel Orientation="Vertical" TextBlock.Foreground="{DynamicResource MaterialDesignBody}" Margin="0,8,24,16">
+                            <ComboBox materialDesign:HintAssist.Hint="Icon" Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                                      FontSize="18"
+                                      ItemsSource="{Binding Icons}"
+                                      SelectedItem="{Binding Playlist.Cover.Icon}">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate DataType="{x:Type materialDesign:PackIconKind}">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="30"/>
+                                                <ColumnDefinition Width="1*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <materialDesign:PackIcon Kind="{Binding Path=.}" HorizontalAlignment="Left"/>
+                                            <TextBlock Grid.Column="1" Text="{Binding Path=., Converter={StaticResource PackIconKindToStringConverter}}"/>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                            <materialDesign:ColorPicker Color="{Binding Playlist.Cover.IconColor, Converter={StaticResource ColorStringConverter}}" Height="150" Margin="0 6 0 0"/>
+                        </StackPanel>
+                    </Expander>
                 </StackPanel>
-                <Grid Grid.Column="1" VerticalAlignment="Center" Margin="10 5 5 5">
-                    <Rectangle Width="130" Height="122" RadiusX="15" RadiusY="15" Stroke="{DynamicResource SolidColorBrushMain}"/>
-                    <TextBlock FontFamily="{DynamicResource MaterialIcons}" FontSize="100" Text="&#xe03d;" Foreground="{DynamicResource SolidColorBrushMain}" HorizontalAlignment="Center"
-                               VerticalAlignment="Center" Padding="0" Margin="0 10 0 0"/>
+                <Grid Grid.Column="1" VerticalAlignment="Top" Margin="10 0 5 5">
+                    <Rectangle Width="130" Height="122" RadiusX="15" RadiusY="15" 
+                               Fill="{Binding Playlist.Cover.BackgroundColor, Converter={StaticResource BrushStringConverter}}"/>
+                    <materialDesign:PackIcon HorizontalAlignment="Center" VerticalAlignment="Center" Width="80" Height="80"
+                                             Foreground="{Binding Playlist.Cover.IconColor, Converter={StaticResource BrushStringConverter}}"
+                                             Kind="{Binding Playlist.Cover.Icon, Mode=OneWay}">
+                    </materialDesign:PackIcon>
                 </Grid>
             </Grid>
-            
+
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2"
                     Margin="0 16 0 0">
                 <Button IsDefault="True" Style="{StaticResource MaterialDesignFlatButton}"
