Delete beatmap from playlist command
And some minor fixes

--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -16,4 +16,5 @@
     <convert:MultipleParametersConverter x:Key="MultipleParametersConverter"/>
     <convert:PackIconKindToStringConverter x:Key="PackIconKindToStringConverter"/>
     <convert:BrushStringConverter x:Key="BrushStringConverter"/>
+    <convert:PlayerObjectToStringConverter x:Key="PlayerObjectToStringConverter"/>
 </ResourceDictionary>
